# oc-claw

./: .gitignore  LICENSE  README.md  README_CN.md
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/assets/builtin/: characters.json
frontend/public/audio/: manbo.m4a
frontend/public/prompt/: pipelines.json
frontend/public/prompt/top/: sleep.txt
frontend/src/: App.tsx  Mini.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: AgentDetailView.tsx  CharacterTab.tsx  CreateCharacterModal.tsx  GifMakerTab.tsx  SettingsTab.tsx
frontend/src/lib/: agents.ts  pipeline.ts  store.ts  types.ts
frontend/src/utils/: gifExport.ts  nanoBanana.ts  spriteUtils.ts
website/: astro.config.mjs  package-lock.json  package.json
website/public/: robots.txt
website/src/components/: Footer.astro  Hero.astro  Nav.astro
website/src/layouts/: Base.astro
website/src/pages/: index.astro
website/src/styles/: global.css
