[package]
name = "ooclaw"
version = "1.3.1"
description = "OpenClaw Desktop Pet"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
libc = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSScreen", "NSApplication", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSArray"] }
chrono = "0.4"
dirs = "5"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
percent-encoding = "2"
